Fixed text-align center on card content

--- a/sass/components/_card-new.scss
+++ b/sass/components/_card-new.scss
@@ -179,6 +179,10 @@
       margin: 0;
       text-align: center;
 
+      & .card-h3 {
+        text-align: inherit;
+      }
+
       &-view {
         display: flex;
 
